packages/ui-library/src/css/tutorial.scss
@import "details-tooltip/popper-container";

.popper-container {
    z-index: 73 !important;

    &__pointer {
        z-index: 74px;
        *[x-placement^="top"] & {
            @include makePointer(13px, $color-white, down);
            margin-top: -5px;
            margin-left: 5px;
        }

        *[x-placement^="bottom"] & {
            @include makePointer(13px, $color-white, up);
            margin-bottom: -5px;
            margin-left: 5px;
        }

        *[x-placement^="right"] & {
            @include makePointer(13px, $color-white, left);
            margin-right: -5px;
            margin-top: 5px;
        }

        *[x-placement^="left"] & {
            @include makePointer(13px, $color-white, right);
            margin-left: -5px;
            margin-left: 5px;
        }
    }
}

.tutorial {
    &__bg {
        &:before {
            content: "";
            position: fixed;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            background-color: rgba(0, 0, 0, 0.5);
            z-index: 72;
        }
        display: flex;
        justify-content: center;
        align-content: center;
        align-items: center;
    }

    &__welcome {
        background-color: $color-white;
        border-radius: 4px;
        z-index: 100;
        width: 400px;
        max-width: 500px;
        background: $color-white;
        box-shadow: $popup-box-shadow;
        position: fixed;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);

        &--content {
            padding: $spacing-lg $spacing-md $spacing-md $spacing-md;
        }

        &--title {
            font-size: 20px;
            font-weight: 700;
            color: $color-neutral-20;
            margin-bottom: $spacing-md;
        }

        &--description {
            font-size: 14px;
            font-weight: 500;
            color: $color-neutral-10;
        }

        &--actions {
            text-align: center;
            padding: $spacing-md $spacing-md $spacing-lg $spacing-md;

            & > * {
                margin-left: $spacing-sm;
                margin-top: $spacing-sm;
            }
        }
    }

    &__modal {
        background-color: $color-white;
        border-radius: 4px;
        z-index: 100;
        width: 300px;
        max-width: 400px;
        position: relative;
        background: $color-white;
        // box-shadow: $popup-box-shadow;

        &--close {
            position: absolute;
            top: $spacing-lg;
            right: $spacing-lg;
            cursor: pointer;
        }

        &--content {
            padding: $spacing-lg $spacing-md $spacing-md $spacing-md;
        }

        &--header {
            margin-bottom: $spacing-md;
        }

        &--title {
            font-size: 20px;
            font-weight: 700;
            color: $color-neutral-20;
            margin-bottom: $spacing-md;
        }

        &--description {
            font-size: 14px;
            font-weight: 500;
            color: $color-neutral-10;
        }

        &--footer {
            margin-top: $spacing-md;
            padding: $spacing-md $spacing-lg;
            border-top: 1px solid $color-neutral-90;
        }

        &--actions {
            & > * {
                margin-left: $spacing-sm;
            }
        }

        &--progress {
            ul.tutorial__modal--steps {
                padding: 0;
                margin: 0;
                list-style: none;

                li.tutorial__modal--step {
                    display: inline-block;
                    margin-right: $spacing-xs;
                    margin-left: -2px;
                    border: 1px solid transparent;
                    padding: 2px;

                    &:before {
                        content: "";
                        height: 8px;
                        width: 8px;
                        border-radius: 50%;
                        background: $color-active-blue;
                        display: block;
                    }

                    &--complete {
                        &:before {
                            background: $color-active-blue;
                        }
                    }

                    &--active {
                        border: 1px solid $color-active-blue;
                        padding: 2px;
                        border-radius: 50%;

                        &:before {
                            background: $color-active-blue;
                        }
                    }

                    &--inactive {
                        &:before {
                            background: $color-neutral-90;
                        }
                    }
                }
            }
        }
    }
}

